# matchbox-theme-nvx

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  TODO  configure.ac
nvx/: Makefile.am
nvx/matchbox/: Makefile.am  theme.desktop.in  theme.xml
nvx/matchbox2/: Makefile.am  theme.desktop.in  theme.xml
